# qt-cpp-editor-runner

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
examples/: prints.cpp
